--- a/style.css
+++ b/style.css
@@ -52,6 +52,19 @@ section {
     background: linear-gradient(to bottom right, #f8f8f8, #e0e0e0); /* Light gray gradient */
 }
 
+#history {
+    background: rgba(255, 255, 255, 0.9); /* Slightly transparent white */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+#statistics {
+    background: rgba(255, 255, 255, 0.9); /* Slightly transparent white */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+#risks-benefits {
+    background: rgba(255, 255, 255, 0.9); /* Slightly transparent white */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 h1, h2 {
     margin-bottom: 10px;
 }
