--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
+.back-button {
+    background-color: #d9534f;
+    color: white;
+}
+
+.back-button:hover {
+    background-color: #c9302c;
+}
+
 section {
     padding: 20px;
     margin: 20px;
